--- a/package.json
+++ b/package.json
@@ -61,15 +61,18 @@
     "@angular/platform-browser": "11.2.8",
     "@angular/platform-browser-dynamic": "11.2.8",
     "@angular/router": "11.2.8",
+    "@ng-bootstrap/ng-bootstrap": "9.1.0",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
     "@types/jasmine": "3.6.7",
     "@types/jasminewd2": "2.0.8",
     "@types/mocha": "8.2.1",
     "@types/node": "14.14.35",
+    "@types/tmi.js": "1.7.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/eslint-plugin-tslint": "4.15.0",
     "@typescript-eslint/parser": "4.16.1",
+    "bootstrap": "5.0.0-beta3",
     "chai": "4.3.4",
     "conventional-changelog-cli": "2.1.1",
     "core-js": "3.6.5",
@@ -93,6 +96,7 @@
     "npm-run-all": "4.1.5",
     "rxjs": "6.6.6",
     "spectron": "14.0.0",
+    "tmi.js": "1.8.3",
     "ts-node": "9.1.1",
     "tslib": "2.1.0",
     "typescript": "4.0.5",
