feat: Moved chatmessages and channel joins to NgRx

--- a/angular.json
+++ b/angular.json
@@ -157,5 +157,8 @@
     "@schematics/angular:directive": {
       "prefix": "app"
     }
+  },
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
   }
 }
