--- a/package.json
+++ b/package.json
@@ -40,9 +40,6 @@
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "lint": "ng lint"
   },
-  "dependencies": {
-    "@electron/remote": "1.0.4"
-  },
   "devDependencies": {
     "@angular-builders/custom-webpack": "11.1.1",
     "@angular-devkit/build-angular": "0.1102.7",
@@ -62,6 +59,10 @@
     "@angular/platform-browser-dynamic": "11.2.8",
     "@angular/router": "11.2.8",
     "@ng-bootstrap/ng-bootstrap": "9.1.0",
+    "@ngrx/effects": "11.1.1",
+    "@ngrx/schematics": "11.1.1",
+    "@ngrx/store": "11.1.1",
+    "@ngrx/store-devtools": "11.1.1",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
     "@types/jasmine": "3.6.7",
