--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
+    "@electron/remote": "1.0.4",
     "@ng-bootstrap/ng-bootstrap": "9.1.0",
     "@ngrx/effects": "11.1.1",
     "@ngrx/schematics": "11.1.1",
@@ -81,6 +82,8 @@
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/eslint-plugin-tslint": "4.15.0",
     "@typescript-eslint/parser": "4.16.1",
+    "angular-auth-oidc-client": "11.6.8",
+    "angular-oauth2-oidc": "10.0.3",
     "bootstrap": "5.0.0-beta3",
     "chai": "4.3.4",
     "conventional-changelog-cli": "2.1.1",
@@ -88,6 +91,7 @@
     "cross-env": "7.0.3",
     "electron": "12.0.2",
     "electron-reload": "1.5.0",
+    "electron-squirrel-startup": "1.0.0",
     "eslint": "7.22.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "31.6.1",
@@ -118,9 +122,6 @@
   "browserslist": [
     "chrome 83"
   ],
-  "dependencies": {
-    "electron-squirrel-startup": "1.0.0"
-  },
   "config": {
     "forge": {
       "packagerConfig": {},
