--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "lint": "ng lint",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "npm-run-all -p build && electron-forge make"
+  },
+  "dependencies": {
+    "@electron/remote": "1.0.4"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "11.1.1",
@@ -66,7 +69,6 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "@electron/remote": "1.0.4",
     "@ng-bootstrap/ng-bootstrap": "9.1.0",
     "@ngrx/effects": "11.1.1",
     "@ngrx/schematics": "11.1.1",
