--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "make": "npm-run-all -p build && electron-forge make"
   },
   "dependencies": {
-    "@electron/remote": "1.0.4"
+    "@electron/remote": "1.0.4",
+    "electron-builder": "22.10.5"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "11.1.1",
