--- a/package.json
+++ b/package.json
@@ -65,11 +65,11 @@
     "@angular/platform-browser": "11.2.8",
     "@angular/platform-browser-dynamic": "11.2.8",
     "@angular/router": "11.2.8",
-    "@electron-forge/cli": "^6.0.0-beta.54",
-    "@electron-forge/maker-deb": "^6.0.0-beta.54",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.54",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
-    "@electron-forge/maker-zip": "^6.0.0-beta.54",
+    "@electron-forge/cli": "6.0.0-beta.55",
+    "@electron-forge/maker-deb": "6.0.0-beta.55",
+    "@electron-forge/maker-rpm": "6.0.0-beta.55",
+    "@electron-forge/maker-squirrel": "6.0.0-beta.55",
+    "@electron-forge/maker-zip": "6.0.0-beta.55",
     "@ng-bootstrap/ng-bootstrap": "9.1.0",
     "@ngrx/effects": "11.1.1",
     "@ngrx/schematics": "11.1.1",
@@ -132,7 +132,7 @@
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "angular_electron"
+            "name": "Combini-Chat"
           }
         },
         {
