--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
   },
   "dependencies": {
     "@electron/remote": "1.0.4",
-    "electron-builder": "22.10.5"
+    "autolinker": "3.14.3",
+    "electron-builder": "22.10.5",
+    "ngx-linky": "3.0.0"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "11.1.1",
