--- a/package.json
+++ b/package.json
@@ -45,9 +45,7 @@
   },
   "dependencies": {
     "@electron/remote": "1.0.4",
-    "autolinker": "3.14.3",
-    "electron-builder": "22.10.5",
-    "ngx-linky": "3.0.0"
+    "electron-builder": "22.10.5"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "11.1.1",
@@ -72,6 +70,9 @@
     "@electron-forge/maker-rpm": "6.0.0-beta.55",
     "@electron-forge/maker-squirrel": "6.0.0-beta.55",
     "@electron-forge/maker-zip": "6.0.0-beta.55",
+    "@fortawesome/angular-fontawesome": "0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "9.1.0",
     "@ngrx/effects": "11.1.1",
     "@ngrx/schematics": "11.1.1",
@@ -89,6 +90,7 @@
     "@typescript-eslint/parser": "4.16.1",
     "angular-auth-oidc-client": "11.6.8",
     "angular-oauth2-oidc": "10.0.3",
+    "autolinker": "3.14.3",
     "bootstrap": "5.0.0-beta3",
     "chai": "4.3.4",
     "conventional-changelog-cli": "2.1.1",
@@ -110,6 +112,7 @@
     "karma-jasmine-html-reporter": "1.5.4",
     "mocha": "8.3.2",
     "nan": "2.14.2",
+    "ngx-linky": "3.0.0",
     "npm-run-all": "4.1.5",
     "rxjs": "6.6.6",
     "spectron": "14.0.0",
