--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "karma-jasmine-html-reporter": "1.5.4",
     "mocha": "8.3.2",
     "nan": "2.14.2",
+    "ngrx-store-localstorage": "12.0.0",
     "ngx-linky": "3.0.0",
     "npm-run-all": "4.1.5",
     "rxjs": "6.6.6",
