--- a/angular.json
+++ b/angular.json
@@ -75,6 +75,22 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ]
+            },
+            "app": {
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.app.ts"
+                }
+              ]
             }
           }
         },
