--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
   },
   "dependencies": {
     "@electron/remote": "1.0.4",
+    "@fortawesome/free-brands-svg-icons": "5.15.3",
+    "@fortawesome/free-regular-svg-icons": "5.15.3",
     "electron-squirrel-startup": "1.0.0"
   },
   "devDependencies": {
